--- a/mtm/ex2/CMakeLists.txt
+++ b/mtm/ex2/CMakeLists.txt
@@ -1,6 +1,17 @@
 cmake_minimum_required(VERSION 3.17)
 project(ex2)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 11)
+set(MTM_FLAGS_DEBUG "-std=c++11 -Wall -Werror -pedantic-errors -L.")
+set(MTM_FLAGS_RELEASE "$(MTM_FLAGS_DEBUG) -DNDEBUG")
 
-add_executable(ex2 Skill.cpp Skill.h Citizen.cpp Citizen.h Employee.cpp Employee.h main.cpp)
+add_executable(ex2 Skill.cpp Skill.h 
+					Citizen.cpp Citizen.h 
+					Employee.cpp Employee.h 
+					City.cpp City.h 
+					exceptions.cpp exceptions.h
+					Faculty.h 
+					WorkPlace.cpp WorkPlace.h 
+					Manager.cpp Manager.h
+					city_test.cpp
+					 )
