--- a/mtm/ex2/CMakeLists.txt
+++ b/mtm/ex2/CMakeLists.txt
@@ -13,5 +13,6 @@ add_executable(ex2 Skill.cpp Skill.h
 					Faculty.h 
 					WorkPlace.cpp WorkPlace.h 
 					Manager.cpp Manager.h
-					city_test.cpp
+					#city_test.cpp
+					cityTestsBiadsy.cpp
 					 )
